# smart_application

./: README.md
client/: CMakeLists.txt  README.md  SmartHomeMonitorClient.pro  add_device_dialog.cpp  add_device_dialog.h  client_theme.h  login_dialog.cpp  login_dialog.h  main.cpp  main_window.cpp  main_window.h  protocol_client.cpp  protocol_client.h  ptz_gear_control.cpp  ptz_gear_control.h  recording_browser_dialog.cpp  recording_browser_dialog.h  video_grid_widget.cpp  video_grid_widget.h  video_tile_widget.cpp  video_tile_widget.h
docs/: ARCHITECTURE.md  DEPLOYMENT.md  PROTOCOL.md  V3_CLIENT.md
include/smart_home/: camera_repository.hpp  mysql_camera_repository.hpp  tlv.hpp
src/: camera_device_protocol.cpp  camera_repository.cpp  mysql_camera_repository.cpp  playback_protocol.cpp  recording_manager.cpp
tests/: camera_repository_tests.cpp  tcp_server_tests.cpp
